--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,18 @@
-<h1>{{title}}</h1>
-<p>Welcome!</p>
+<h1>Welcome!</h1>
 <div>
-    <a href="/celebrities">Go to the the project</a>
+    <ul>
+        <li>
+        <a href="/celebrities">Go to the Celebrities</a>
+        </li>
+        <li>
+        <a href="/celebrities/new">Create a new Celeberity</a>
+        </li>
+        <li>
+        <a href="/movies/">Go to the Movies</a>
+        </li>
+        <li>
+        <a href="/movies/new">Create a new Movie</a>
+        </li>   
+    </ul>
 </div>
-    <a href="/celebrities/new">Create a new Celeberity</a>
+
